# sq-connector-template

./: FINDINGS.md  NOTICE.md  README.md  manifest.yaml  pyproject.toml  renovate.json
.github/: CODEOWNERS
.github/workflows/: dependency-migration.yml
src/sq_example/: __init__.py  canonical.py  live.py
tests/: test_canonical.py
